--- a/ENTREGABLE-1.html
+++ b/ENTREGABLE-1.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-u">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-u">
 
     
 
@@ -294,7 +294,7 @@
                 <h2 class="align-left mbr-bold mbr-fonts-style display-2"><em>We're Science's Creator</em></h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="index.html">Volver a Home</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-primary display-4" href="index.html">Volver a Inicio</a></div>
             </div>
         </div>
     </div>
