--- a/ENTREGABLE-2.html
+++ b/ENTREGABLE-2.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-1j">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-1j">
 
     
 
@@ -91,7 +91,7 @@
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5"><em>
                     Descripción (social y económico) el aso clínico y descripción del problema.</em></p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="ENTREGABLE-1.html">
-                        <span class="mbr-iconfont mbri-file"></span>Entregable 1</a> <a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">
+                        <span class="mbr-iconfont mbri-file"></span>Entregable 1</a> <a class="btn btn-md btn-secondary display-4" href="ENTREGABLE-3.html">
                         <span class="mbr-iconfont mbri-file"></span>Entregable 3</a></div>
             </div>
         </div>
