create github pages

--- a/ENTREGABLE-4.html
+++ b/ENTREGABLE-4.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-40">
+<section class="engine"><a href="https://mobirise.info/g">build your own site for free</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-40">
 
     
 
@@ -147,9 +147,7 @@
                             </div>                
 
                             <div class="card-box">
-                                <p class="block-text mbr-fonts-style display-7">
-                                   Mobirise offers several themes that include sliders, galleries, article blocks, counters, accordions, video, animated text, live filtered tables, shop, contact forms, lightbox, testimonials, timelines, google map, progress bars and more. 
-                                </p>
+                                <p class="block-text mbr-fonts-style display-7">Utiliza una técnica precisa y no invadí a qué no requiere del contacto directo con el paciente. De fácil uso y portátil&nbsp;</p>
                             </div>
                         </div>
 
@@ -166,7 +164,7 @@
 
                             <div class="card-box">
                                 <p class="block-text mbr-fonts-style display-7">
-                                    Cut down the development time with drag-and-drop website builder. Drop the blocks into the page, edit content inline and publish - no technical skills required.
+                                    Se limita a la evaluación de un área de 50 cm2 , por lo que si se desea abarcar un área mayor se debe volver a realizar el proceso.
                                 </p>
                             </div>
                         </div>
@@ -223,9 +221,7 @@
                             </div>                
 
                             <div class="card-box">
-                                <p class="block-text mbr-fonts-style display-7">
-                                   Mobirise offers several themes that include sliders, galleries, article blocks, counters, accordions, video, animated text, live filtered tables, shop, contact forms, lightbox, testimonials, timelines, google map, progress bars and more. 
-                                </p>
+                                <p class="block-text mbr-fonts-style display-7">Ligero y fácil transporte durante la cirugía.</p>
                             </div>
                         </div>
 
@@ -241,8 +237,7 @@
                             </div>                
 
                             <div class="card-box">
-                                <p class="block-text mbr-fonts-style display-7">
-                                    Cut down the development time with drag-and-drop website builder. Drop the blocks into the page, edit content inline and publish - no technical skills required.
+                                <p class="block-text mbr-fonts-style display-7">Pierde efectividad si la profundidad de la quemadura es muy poco homogénea. Además, que su uso está limitado a limpiezas quirúrgicas por medio de escisiones tangenciales (escarectomia tangencial). Ya que dicho procedimiento es donde se usa el dermatomo.
                                 </p>
                             </div>
                         </div>
