--- a/PROYECTO.html
+++ b/PROYECTO.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
 
     
 
@@ -264,14 +264,14 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background4.jpg" alt="Mobirise">
+                        <img src="assets/images/whatsapp-image-2019-09-21-at-9.05.52-am-490x276.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">ENTREGABLE 4</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                            Descripción de 03 propuestas de solución.<br>HITO 1</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="ENTREGABLE-4.html" class="btn btn-primary display-4">
                             Leer más</a></div>
                 </div>
             </div>
