create github pages

--- a/PROYECTO.html
+++ b/PROYECTO.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own website</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
 
     
 
@@ -241,7 +241,7 @@
                             Contexto (social y económico) del caso clínico y descripción del problema.
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">Leer más</a></div>
+                    <div class="mbr-section-btn text-center"><a href="ENTREGABLE-2.html" class="btn btn-primary display-4">Leer más</a></div>
                 </div>
             </div>
 
@@ -256,7 +256,7 @@
                             Estado del arte (contexto comercial y científico) y tabla de requerimientos.
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="ENTREGABLE-3.html" class="btn btn-primary display-4">
                             Leer más</a></div>
                 </div>
             </div>
