--- a/ENTREGABLE-4.html
+++ b/ENTREGABLE-4.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-40">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-40">
 
     
 
@@ -181,9 +181,8 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p>La ecografía Doppler es un método para la detección de flujo sanguíneo que es utilizado actualmente, sin embargo, se propone implementar una nueva propuesta basándose en el mismo concepto, pero de diseño diferente de modo que sea de un uso más eficaz que el ya existente.
-</p><p>Como se mencionó en nuestro estado del arte la ecografía Doppler es una prueba no invasiva que calcula el flujo de la sangre en los vasos sanguíneos haciendo rebotar ondas sonoras de alta frecuencia en los glóbulos rojos circulantes.
-</p><p>La propuesta de solución consta de un aparato portátil que se podrá aproximar a la zona de quemadura midiendo la proporción de cambios en la frecuencia, al medir estos nos brindará información acerca de la rapidez del flujo sanguíneo en caso este presente. Una vez detectado flujo sanguíneo se podrá deducir que se encontró piel vitalizada y mediante la pantalla colocada en la parte posterior se podrá delimitar las zonas en las que se puede percibir el flujo sanguíneo para que así se pueda saber en qué partes todavía se necesita seguir haciendo la escarectomia.
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p>El láser Doppler es un método para la detección de flujo sanguíneo que es utilizado actualmente, sin embargo, se propone implementar una nueva propuesta basándose en el mismo concepto, pero de diseño diferente de modo que sea de un uso más eficaz que el ya existente.
+</p><p>Como se mencionó en nuestro estado del arte la ecografía Doppler es una prueba no invasiva que calcula la velocidad del flujo en un punto deseado sin perturbar el flujo.</p><p>La propuesta de solución consta de un aparato portátil que se podrá aproximar a la zona de quemadura midiendo la proporción de cambios en la frecuencia, al medir estos nos brindará información acerca de la rapidez del flujo sanguíneo en caso este presente. Una vez detectado flujo sanguíneo se podrá deducir que se encontró piel vitalizada y mediante la pantalla colocada en la parte posterior se podrá delimitar las zonas en las que se puede percibir el flujo sanguíneo para que así se pueda saber en qué partes todavía se necesita seguir haciendo la escarectomia.
 </p></div>
         </div>
     </div>
