create github pages

--- a/ENTREGABLE-4.html
+++ b/ENTREGABLE-4.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-40">
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-40">
 
     
 
@@ -198,7 +198,7 @@
         <div class="col-md-12">
             <div class="media-container-row">
                 <div class="mbr-figure m-auto" style="width: 50%;">
-                    <img src="assets/images/beto-668x680.png" alt="Mobirise" title="">
+                    <img src="assets/images/betazo-3-896x783.png" alt="Mobirise" title="">
                 </div>
                 <div class=" align-left aside-content">
                     <h2 class="mbr-title pt-2 mbr-fonts-style display-2">ESTRATEGIA 2</h2>
