--- a/ENTREGABLE-1.html
+++ b/ENTREGABLE-1.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-u">
+<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-u">
 
     
 
@@ -93,7 +93,7 @@
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5"><em>
                     Creación de página web, presentación de los miembros del equipo y asignación de roles.</em></p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="PROYECTO.html">
-                        <span class="mbr-iconfont mbri-file"></span>Proyecto</a> <a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">
+                        <span class="mbr-iconfont mbri-file"></span>Proyecto</a> <a class="btn btn-md btn-secondary display-4" href="ENTREGABLE-2.html">
                         <span class="mbr-iconfont mbri-file"></span>Entregable 2</a></div>
             </div>
         </div>
