--- a/PROYECTO.html
+++ b/PROYECTO.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
+<section class="engine"><a href="https://mobirise.info/b">how to create your own website for free</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
 
     
 
@@ -299,7 +299,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background1.jpg" alt="Mobirise">
+                        <img src="assets/images/whatsapp-image-2019-09-28-at-9.11.19-am-490x276.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">
