create github pages

--- a/PROYECTO.html
+++ b/PROYECTO.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
 
     
 
@@ -332,15 +332,14 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background3.jpg" alt="Mobirise">
+                        <img src="assets/images/fondo-490x299.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">NO DISPONIBLE</h4>
+                        <h4 class="card-title mbr-fonts-style display-7">ENTREGABLE 7</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            NO DISPONIBLE
-                        </p>
+                            Plan de trabajo y cronograma</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="ENTREGABLE-7.html" class="btn btn-primary display-4">
                             Leer más
                         </a></div>
                 </div>
