create github pages

--- a/ENTREGABLE-2.html
+++ b/ENTREGABLE-2.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-1j">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-1j">
 
     
 
