create github pages

--- a/ENTREGABLE-6.html
+++ b/ENTREGABLE-6.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-57">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-57">
 
     
 
@@ -490,7 +490,7 @@
     
     <figure class="mbr-figure align-center container">
         <div class="video-block" style="width: 60%;">
-            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/qYwxAGGLjiY?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/nlaRRKh2il8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
