create github pages

--- a/ENTREGABLE-7.html
+++ b/ENTREGABLE-7.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-6c">
+<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-6c">
 
     
 
@@ -143,7 +143,7 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 87%;">
-            <img src="assets/images/gant-1466x818.png" width="1400" alt="Mobirise" title="">
+            <img src="assets/images/gant-2-1743x952.png" width="1400" alt="Mobirise" title="">
             
         </div>
     </figure>
