--- a/ENTREGABLE-6.html
+++ b/ENTREGABLE-6.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-57">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-57">
 
     
 
