--- a/ENTREGABLE-9.html
+++ b/ENTREGABLE-9.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-7b">
 
     
 
@@ -90,7 +90,7 @@
                 
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">Diseño del módulo principal y secundario.<br></p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="ENTREGABLE-8.html">
-                        <span class="mbr-iconfont mbri-file"></span>Entregable 8</a> <a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">
+                        <span class="mbr-iconfont mbri-file"></span>Entregable 8</a> <a class="btn btn-md btn-secondary display-4" href="ENTREGABLE-10.html">
                         <span class="mbr-iconfont mbri-file"></span>Entregable 10</a></div>
             </div>
         </div>
