--- a/PROYECTO.html
+++ b/PROYECTO.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
 
     
 
@@ -400,12 +400,12 @@
                         <img src="assets/images/background2.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">NO DISPONIBLE</h4>
+                        <h4 class="card-title mbr-fonts-style display-7">ENTREGABLE 10</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            NO DISPONIBLE
+                            Avance IM1 - Diseño e implementación preliminar (maquetas de los bloques)
                         </p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="ENTREGABLE-10.html" class="btn btn-primary display-4">
                             Leer más</a></div>
                 </div>
             </div>
