--- a/PROYECTO.html
+++ b/PROYECTO.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
 
     
 
@@ -348,7 +348,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background4.jpg" alt="Mobirise">
+                        <img src="assets/images/whatsapp-image-2019-11-09-at-9.52.23-am-490x871.jpeg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">ENTREGABLE 8</h4>
@@ -383,7 +383,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background1.jpg" alt="Mobirise">
+                        <img src="assets/images/whatsapp-image-2019-11-09-at-9.52.28-am-490x871.jpeg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">ENTREGABLE 9</h4>
@@ -397,13 +397,12 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background2.jpg" alt="Mobirise">
+                        <img src="assets/images/whatsapp-image-2019-11-09-at-9.52.50-am-490x276.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">ENTREGABLE 10</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Avance IM1 - Diseño e implementación preliminar (maquetas de los bloques)
-                        </p>
+                            Avance IM1 - Diseño e implementación preliminar. (maquetas de los bloques)</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="ENTREGABLE-10.html" class="btn btn-primary display-4">
                             Leer más</a></div>
@@ -413,15 +412,14 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background3.jpg" alt="Mobirise">
+                        <img src="assets/images/whatsapp-image-2019-11-14-at-6.14.04-pm-490x276.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">NO DISPONIBLE</h4>
+                        <h4 class="card-title mbr-fonts-style display-7">ENTREGABLE 11</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            NO DISPONIBLE
-                        </p>
+                            Avance IM2 - Implementación de la propuesta. (integración de bloques)</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page14.html" class="btn btn-primary display-4">
                             Leer más</a></div>
                 </div>
             </div>
@@ -517,12 +515,10 @@
                         <img src="assets/images/background4.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">NO DISPONIBLE</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                           NO DISPONIBLE
-                        </p>
+                        <h4 class="card-title mbr-fonts-style display-7">PDF&nbsp;</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">PDF de las actas durante todo el curso.</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page15.html" class="btn btn-primary display-4">
                             Leer más</a></div>
                 </div>
             </div>
