create github pages

--- a/PROYECTO.html
+++ b/PROYECTO.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
 
     
 
@@ -512,11 +512,11 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/background4.jpg" alt="Mobirise">
+                        <img src="assets/images/caso-clinico-490x187.png" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">PDF&nbsp;</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">PDF de las actas durante todo el curso.</p>
+                        <h4 class="card-title mbr-fonts-style display-7">ACTAS&nbsp;</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">.PNG de las actas durante todo el curso.</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="page15.html" class="btn btn-primary display-4">
                             Leer más</a></div>
