--- a/ENTREGABLE-10.html
+++ b/ENTREGABLE-10.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-7q">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-7q">
 
     
 
@@ -90,7 +90,7 @@
                 
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">Avance IM1 - Diseño e implementación preliminar (maquetas de los bloques)<br></p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="ENTREGABLE-9.html">
-                        <span class="mbr-iconfont mbri-file"></span>ENTREGABLE 9</a> <a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">
+                        <span class="mbr-iconfont mbri-file"></span>ENTREGABLE 9</a> <a class="btn btn-md btn-secondary display-4" href="page14.html">
                         <span class="mbr-iconfont mbri-file"></span>ENTREGABLE 11</a></div>
             </div>
         </div>
