create github pages

--- a/ENTREGABLE-2.html
+++ b/ENTREGABLE-2.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-1j">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-1j">
 
     
 
