create github pages

--- a/page14.html
+++ b/page14.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-85">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-85">
 
     
 
@@ -90,7 +90,7 @@
                 
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">Avance IM2 - Implementación de la propuesta. (integración de bloques)<br></p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="ENTREGABLE-10.html">
-                        <span class="mbr-iconfont mbri-file"></span>ENTREGABLE 10</a> <a class="btn btn-md btn-secondary display-4" href="https://mobirise.co">
+                        <span class="mbr-iconfont mbri-file"></span>ENTREGABLE 10</a> <a class="btn btn-md btn-secondary display-4" href="page16.html">
                         <span class="mbr-iconfont mbri-file"></span>ENTREGABLE 12</a></div>
             </div>
         </div>
