--- a/ENTREGABLE-3.html
+++ b/ENTREGABLE-3.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-2m">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-2m">
 
     
 
