--- a/ENTREGABLE-6.html
+++ b/ENTREGABLE-6.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-57">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-57">
 
     
 
