create github pages

--- a/page15.html
+++ b/page15.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-87">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-87">
 
     
 
@@ -474,7 +474,7 @@
 
     <figure class="mbr-figure container">
         <div class="image-block" style="width: 66%;">
-            <img src="assets/images/background13.jpg" width="1400" alt="Mobirise">
+            <img src="assets/images/background11.jpg" width="1400" alt="Mobirise">
             
         </div>
     </figure>
