--- a/PROYECTO.html
+++ b/PROYECTO.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-9">
 
     
 
@@ -480,12 +480,10 @@
                         <img src="assets/images/background2.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">NO DISPONIBLE</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            NO DISPONIBLE
-                        </p>
+                        <h4 class="card-title mbr-fonts-style display-7">POSTER FINAL</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">VISUALIZACION DEL POSTER</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page18.html" class="btn btn-primary display-4" target="_blank">
                             Leer más
                         </a></div>
                 </div>
@@ -497,12 +495,11 @@
                         <img src="assets/images/background3.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">NO DISPONIBLE</h4>
+                        <h4 class="card-title mbr-fonts-style display-7">INFORME FINAL</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            NO DISPONIBLE
-                        </p>
+                            PROYECTO: TermoDomo<br>Archivo en PDF CON DERECHOS RESERVADOS</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">
+                    <div class="mbr-section-btn text-center"><a href="page19.html" class="btn btn-primary display-4" target="_blank">
                             Leer más</a></div>
                 </div>
             </div>
