--- a/page18.html
+++ b/page18.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-aj">
+<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section once="footers" class="cid-rCu9h1AqAI" id="footer6-aj">
 
     
 
